--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,6 @@
     },
     "rootDirs": ["./src", "./test"]
   },
-  "include": ["src/**/*.ts", "test/**/*.ts"],
+  "include": ["src/**/*.ts", "test/**/*.ts", "combine-services.js"],
   "exclude": ["node_modules", "dist"]
 }
