--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "scalarjs-sdk",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "author": "scalarorg",
   "repository": {
     "type": "git",
@@ -50,7 +50,8 @@
     "@protobuf-ts/grpc-transport": "^2.9.4",
     "@protobuf-ts/plugin": "^2.9.4",
     "@protobuf-ts/runtime": "^2.9.4",
-    "@protobuf-ts/runtime-rpc": "^2.9.4"
+    "@protobuf-ts/runtime-rpc": "^2.9.4",
+    "glob": "^11.0.0"
   },
   "devDependencies": {
     "@types/bun": "^1.1.14",
