feat: create deploy token request

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@scalarorg/scalarjs-sdk",
-  "version": "0.0.1",
+  "name": "@scalar-lab/scalarjs-sdk",
+  "version": "0.0.2",
   "publishConfig": {
     "registry": "https://registry.npmjs.org",
     "name": "@scalar-lab/scalarjs-sdk",
